[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/level/1/Dark.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/level/1/Light.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/level/Level.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="DarkTileMap" parent="." instance=ExtResource( 1 )]

[node name="LightTileMap" parent="." instance=ExtResource( 2 )]

[node name="DarkSpawn" type="Position2D" parent="."]
position = Vector2( 47, 236 )

[node name="KeySpawn" type="Position2D" parent="."]
position = Vector2( 238, 238 )

[node name="ExitSpawn" type="Position2D" parent="."]
position = Vector2( 463, 236 )

[node name="LightSpawn" type="Position2D" parent="."]
position = Vector2( 49, 430 )
